Fix template generator for R2
Issue-ID: VFC-728
